--- a/apps/templates/home/tbl_bootstrap.html
+++ b/apps/templates/home/tbl_bootstrap.html
@@ -54,6 +54,8 @@
                                                             <th>description</th>
                                                             <th>ingredients</th>
                                                             <th>directions</th>
+                                                            <th>action</th>
+                                                            <th>action</th>
                                                             
                                                         </tr>
                                                     </thead>
@@ -67,6 +69,8 @@
                                                             <td class="text-wrap"><div style="width:10rems;">{{recipe.description}}</div></td>
                                                             <td class="text-wrap">{{recipe.ingredients}}</td>
                                                             <td class="text-wrap">{{recipe.directions}}</td>
+                                                            <td class="text-wrap"> <button class="btn-primary" onclick='return false;' data-target="#mymodal2" data-toggle="modal"> edit</button></td>
+                                                            <td class="text-wrap"> <button type="submit" class="btn btn-danger" onclick="submit_entry()">delete</button></td>
                                                         </tr>
    
                                                         {% endfor %} 
@@ -90,6 +94,64 @@
         </div>
     </section>
     <!-- [ Main Content ] end -->
+    <!-- [ modal ] begins -->
+
+    <div class="modal fade" role="dialog" id="mymodal2" >
+        <div class="modal-dialog">
+         <div class="modal-content">
+           <div class="modal-header"><button type="button" class="close" data-dismiss="modal">x</button></div>
+           <div class="modal-body">
+            <div class="row">
+                <div class="col-md-6">
+                    <form>
+                        <div class="form-group">
+                            <label for="exampleInputEmail1">title</label>
+                            <input type="text" class="form-control" id="recipetitle" aria-describedby="emailHelp" placeholder="Enter title">
+                            <small id="emailHelp" class="form-text text-muted">title is what the dish will be refered to.</small>
+                        </div>
+                        <div class="form-group">
+                            <label for="exampleInputPassword1">Cuisine</label>
+                            <input type="text" class="form-control" id="cuisine" placeholder="cuisine">
+                        </div>
+                        <div class="form-group form-check">
+                            <input type="checkbox" class="form-check-input" id="exampleCheck1">
+                            <label class="form-check-label" for="exampleCheck1">visible to everyone</label>
+                        </div>
+                        <div class="form-group">
+                            <label for="exampleFormControlTextarea1">ingredients</label>
+                            <textarea class="form-control" id="ingredients" rows="3"></textarea>
+                        </div>
+                        <button type="submit" class="btn btn-primary" onclick="submit_entry()">Submit</button>
+                    
+                </div>
+                <div class="col-md-6">
+                    
+                        <div class="form-group">
+                            <label for="exampleFormControlSelect1">Meal</label>
+                            <select class="form-control" id="meal">
+                                <option value="bfast">Breakfast</option>
+                                <option value="Launch">Launch</option>
+                                <option value="dinner">Dinner</option>
+                                
+                            </select>
+                        </div>
+                        
+                        <div class="form-group">
+                            <label for="exampleFormControlTextarea1">Description</label>
+                            <textarea class="form-control" id="description" rows="3"></textarea>
+                        </div>
+                        <div class="form-group">
+                            <label for="exampleFormControlTextarea1">Directions</label>
+                            <textarea class="form-control" id="directions" rows="3"></textarea>
+                        </div>
+                    </form>
+                </div>
+            </div>
+            </div>
+         </div>
+        </div> 
+      </div>  
+    <!-- [ modal ends ] end -->
 
 {% endblock content %}
 
